[workspace]
members = [
    "core",
    "symbolic", 
    "automl",
    "connectors",
    "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["PBJBI Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/paiml/pbjbi"
rust-version = "1.82"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Statistical libraries
ndarray = "0.16"
nalgebra = "0.33"
statrs = "0.17"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"  # Deterministic RNG

# Data processing
polars = { version = "0.45", features = ["lazy", "csv", "parquet", "json"] }
arrow = "54.0"
parquet = "54.0"

# Testing
proptest = "1.6"
quickcheck = "1.0"
criterion = { version = "0.6", features = ["html_reports"] }
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true