[package]
name = "pbjbi-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pbjbi"
path = "src/main.rs"

[dependencies]
pbjbi-core = { path = "../core" }
pbjbi-symbolic = { path = "../symbolic" }
pbjbi-automl = { path = "../automl" }
pbjbi-connectors = { path = "../connectors" }

# Core
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
proptest.workspace = true